--- a/web/navbar.html
+++ b/web/navbar.html
@@ -13,7 +13,7 @@
                         <li><a href="Files/references.html">References</a></li>
                     </ul>
 			    </li> 
-			    <li><a href="https://github.com">Source</a></li>
+			    <li><a href="https://github.com/alanssitis/smart-air-hockey-table">Source</a></li>
 			    <li><a href="Media/media.html">Media</a></li>
 			    <li class="sub-menu"><a href="Contact/contact.html">Contact</a>
                     <ul class="submenu">
