Replace team member 3 placeholders

--- a/web/Team/member3.html
+++ b/web/Team/member3.html
@@ -1,14 +1,16 @@
 <div id="team">
     <div class="photo">
     <!--Team member photos are loaded into team.html. Use root-relative links (no leading slash) for team member photos-->
-	<p><img src="Team/img/anonymous.jpg"></img></p>
+	<p><img src="Team/img/trevor.jpg"></img></p>
     </div>
     <div class="info"><span>
-	<b><u>Name:</u></b> Team member's name here <br>
-	<b><u>Role:</u></b> Team member's position here <br>
-	<b><u>Email:</u></b> Team member's email here <br>
+	<b><u>Name:</u></b> Trevor Moorman <br>
+	<b><u>Role:</u></b> Systems Engineer <br>
+	<b><u>Email:</u></b> tmoorma@purdue.edu <br>
     <b><u>Progress Report:</u></b> <a href="Team/progress/progress3.html">Link</a><br>
 	<b><u>About:</u></b>
-	Include a brief description of yourself. Go over  achievements, hobbies, history, or anything else you think is worth mentioning about yourself.
+    Trevor is a computer engineer with an interest in utilizing his degree to further automation through embedded systems. At Purdue University, he has served as an undergraduate teaching assistant for ECE 264 for two semesters and for ECE 368 for one semester. As an undergraduate teaching assistant, he was primarily responsible for holding office hours although he also hosted recitations for ECE 368.<br>
+    From May to August of 2023, Trevor got the opportunity to work as a Firmware Engineer Intern at Indesign, LLC.  Indesign is a computer and electrical engineering consultancy firm located in Lawrence, Indiana. During his internship, Trevor got the opportunity to work on several projects. These projects primarily involved developing firmware in C, although one included a companion PC application developed using JavaScript with the Electron framework. Projects involved microcontrollers from both Microchip Technology and STMicroelectronics. This internship served as a great opportunity to both utilize what he had learned and gain practical work experience.<br>
+    Outside of school and work, his main hobbies are biking, lacrosse, and video games. In high school, Trevor began playing lacrosse as a midfielder, but later transitioned into defense. He primarily plays strategy games, with his favorites being Civilization V and Factorio. However, he now mostly plays multiplayer games with friends.<br>
     </span></div>
 </div>
