--- a/web/navbar.html
+++ b/web/navbar.html
@@ -19,7 +19,7 @@
                     <ul class="submenu">
                         <li><a href="mailto:achungma@purdue.edu?subject=[ECE477]">Alan Chung Ma</a></li>
                         <li><a href="mailto:wdobert@purdue.edu?subject=[ECE477]">William Dobert</a></li>
-                        <li><a href="mailto:student2@purdue.edu?subject=[ECE477]">Student3</a></li>
+                        <li><a href="mailto:tmoorma@purdue.edu?subject=[ECE477]">Trevor Moorman</a></li>
                         <li><a href="mailto:student2@purdue.edu?subject=[ECE477]">Student4</a></li>                      
                     </ul>
 			    </li>
