--- a/web/Team/member2.html
+++ b/web/Team/member2.html
@@ -1,14 +1,14 @@
 <div id="team">
     <div class="photo">
     <!--Team member photos are loaded into team.html. Use root-relative links (no leading slash) for team member photos-->
-	<p><img src="Team/img/anonymous.jpg"></img></p>
+	<p><img src="Team/img/will.jpg"></img></p>
     </div>
     <div class="info"><span>
-	<b><u>Name:</u></b> Team member's name here <br>
-	<b><u>Role:</u></b> Team member's position here <br>
-	<b><u>Email:</u></b> Team member's email here <br>
-    <b><u>Progress Report:</u></b> <a href="Team/progress/progress2.html">Link</a><br>    
+	<b><u>Name:</u></b> William Dobert <br>
+	<b><u>Role:</u></b> Software Engineer <br>
+	<b><u>Email:</u></b> wdobert@purdue.edu <br>
+    <b><u>Progress Report:</u></b> <a href="Team/progress/progress2.html">Link</a><br>
 	<b><u>About:</u></b>
-	Include a brief description of yourself. Go over  achievements, hobbies, history, or anything else you think is worth mentioning about yourself.
+	Will is a motivated, teamwork-oriented student with a passion for embedded systems design. He has previously completed coursework in embedded systems, compilers, operating systems, and integrated circuit design. In his recent internship experience, he was responsible for developing firmware in close collaboration with a team of skilled engineers. This experience provided Will with new perspectives on system design for consumer products and the vital role that firmware plays when designing a device.
     </span></div>
 </div>
