--- a/web/navbar.html
+++ b/web/navbar.html
@@ -18,7 +18,7 @@
 			    <li class="sub-menu"><a href="Contact/contact.html">Contact</a>
                     <ul class="submenu">
                         <li><a href="mailto:achungma@purdue.edu?subject=[ECE477]">Alan Chung Ma</a></li>
-                        <li><a href="mailto:student2@purdue.edu?subject=[ECE477]">Student2</a></li>
+                        <li><a href="mailto:wdobert@purdue.edu?subject=[ECE477]">William Dobert</a></li>
                         <li><a href="mailto:student2@purdue.edu?subject=[ECE477]">Student3</a></li>
                         <li><a href="mailto:student2@purdue.edu?subject=[ECE477]">Student4</a></li>                      
                     </ul>
