--- a/web/Team/member1.html
+++ b/web/Team/member1.html
@@ -9,6 +9,6 @@
 	<b><u>Email:</u></b> achungma@purdue.edu <br>
     <b><u>Progress Report:</u></b> <a href="Team/progress/progress1.html">Link</a><br>
 	<b><u>About:</u></b>
-    Alan is a self-driven student researcher that is curious and passionate about building secure systems. He is a thoughtful leader, known for being detail-oriented and for understanding the big picture. His resourcefulness and attention to detail empowers those around him to achieve results.Alan is a self-driven student researcher that is curious and passionate about building secure systems. He is a thoughtful leader, known for being detail-oriented and for understanding the big picture. His resourcefulness and attention to detail empowers those around him to achieve results.
+    Alan is a self-driven student researcher that is curious and passionate about building secure systems. He is a thoughtful leader, known for being detail-oriented and for understanding the big picture. His resourcefulness and attention to detail empowers those around him to achieve results.
     </span></div>
 </div>
