--- a/web/Team/member4.html
+++ b/web/Team/member4.html
@@ -1,14 +1,14 @@
 <div id="team">
     <div class="photo">
     <!--Team member photos are loaded into team.html. Use root-relative links (no leading slash) for team member photos-->
-	<p><img src="Team/img/anonymous.jpg"></img></p>
+	<p><img src="Team/img/ben.jpg"></img></p>
     </div>
     <div class="info"><span>
-	<b><u>Name:</u></b> Team member's name here <br>
-	<b><u>Role:</u></b> Team member's position here <br>
-	<b><u>Email:</u></b> Team member's email here <br>
+	<b><u>Name:</u></b> Ben Owen <br>
+	<b><u>Role:</u></b> Hardware Engineer <br>
+	<b><u>Email:</u></b> owen67@purdue.edu <br>
     <b><u>Progress Report:</u></b> <a href="Team/progress/progress4.html">Link</a><br>    
 	<b><u>About:</u></b>
-	Include a brief description of yourself. Go over  achievements, hobbies, history, or anything else you think is worth mentioning about yourself.
+	Ben has lots of experience with embedded electronics and PCB design. As Electrical Lead for Autonomous Motorsports Purdue, he spearheaded the PCB redesign from the ground up, including shifting to a brand new microcontroller platform and integrating many different analog and digital components into the final design. Furthermore, his experience in classwork, including microcontroller and FPGA-focused courses, provides him with lots of experience with low-level embedded microcontrollers.
     </span></div>
 </div>
