Stub progress report 1/2

--- a/web/Team/progress/progress2.html
+++ b/web/Team/progress/progress2.html
@@ -52,13 +52,13 @@ contact course staff.
 			and include things such as a file lister (for listing out homework assignments or tutorials)
 		-->
 		<div id="content">
-            <h2>Progress Report for -insert student name here-</h2>
+            <h2>Progress Report for William Dobert</h2>
             
             <h4>Weeks 1-2:</h4>
-            <b>Date:</b> -Enter today's date here (the date you posted)-<br>
+            <b>Date:</b> 9/1/2023 <br>
             <b>Total hours:</b> -Enter the number of hours you worked this week here-<br>
             <b>Description of project design efforts:</b><br>
-            -Discuss your project design efforts here. Remember to follow the guidelines presented in the Progress Report Policy that is posted on Brightspace.</br>
+            Will blablabla</br>
 
             <br>
 
