--- a/web/Team/progress/progress4.html
+++ b/web/Team/progress/progress4.html
@@ -68,13 +68,19 @@ contact course staff.
 						<br/>
 						<b>Background research</b><br/>
 						Most of the background research I did over these first two weeks related to feasibility analysis for various components.  Due to the scale and complexity of our table, I investigated different possible solutions for puck tracking, communication, and LED manipulation.  I analyzed prices and datasheets for various sensors, checked what parts we could potentially obtain for free using the ECE shop catalog, and brainstormed a few solutions for high speed communication of dozens of microcontrollers.  Heading into the next few weeks, this research will be tested for real-world feasibility.
+						<u>STM/STM communication</u>
+						My primary research was trying to find which STM32 models would support our worst-case situation: one STM32 for each daughterboard PCB.  Our master STM32 would need to be high speed and have lots of communication peripherals and I/O pins.  After lots of evaluation, I found the STM32F446RE, which is both in stock and cheap.  It can run at high speeds of  up to 180MHz, but more importantly, has lots of onboard protocols, including quad SPI and up to 114 I/O, though we will have less available to avoid the BGA packaged version.
+						<br/>
+						Another microcontroller we may explore is one of the lines with OCTOSPI.  This would allow us to communicate with all of the rows at the same time.  However, for potential expandability of our table, this doesn't solve the overarching problem.
 						<br/>
 						<b>Team Meetings</b><br/>
 						Our team held a few meetings to work on the team assignments.  These meetings were mostly used to outline each member's responsibility and split the work according to our strengths, but we also brainstormed ideas for our tables.  Much of the time spent in these meetings is described in the other two sections for this week's progress report.
 						<br/>
 						<b>Team Assignments</b><br/>
 						The first two weeks had both the revised initial project proposal, final project proposal, and the function specifications due.  I spent a lot of time revising our initial proposal, primarily researching and decsribing a more relevant existing product to include in our market research section of the document.  For the final project proposal, I primarily helped with the initial budget estimation, using hypothetical parts and current market pricing to create a rough price estimate for our project.
-                      
+						<br/>
+						<b>Brainstorming PDF</b><br/>
+						Notes from my brainstorming and diagrams about my communication brainstorming can be found at this link: <a href = "Team/progress/files/ben-brainstorming-20230901.pdf" target = "_blank">Brainstorming PDF</a>
         </div>
 	
 		<!-- Instantiate global footer. Any changes to the footer should be made through the top-level file "footer.html" -->
